--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,26 @@ main {
     background: rgb(251, 1, 255);
   }
   
-
+  .navbar {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    }
+    .navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    }
+    .navbar li {
+    display: inline-flex;
+    }
+    .navbar a {
+    text-decoration: none;
+    color: #fff;
+    padding: 10px;
+    }
 
   
   .satisfy-regular {
