--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,17 @@ main {
     font-weight: 400;
     font-style: normal;
   }
+
+/*----grid layout---*/
+
+
+
+
+
+
+
+
+
   
   
   .pre-bday-inner {
