--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,17 @@
 /* Place CSS styles here */
 /* Place CSS styles here */
+.bubblegum-sans-regular {
+  font-family: "Bubblegum Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
 
 body {
   background-color: #3e2e4e; /* Black background */
   color: #fff; /* White text */
   margin: 0; /* Remove default margin */
-  font-family: Arial, sans-serif; /* Set default font */
+  font-family:  "Bubblegum Sans", sans-serif; /* Set default font */
 }
 
 
