--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ main {
     background: rgb(251, 1, 255);
   }
   
+
+
+  /*----Navigation----*/
+
   .navbar {
     background-color: #333;
     color: #fff;
@@ -41,6 +45,18 @@ main {
     color: #fff;
     padding: 10px;
     }
+
+    /* Navbar link default color */
+.navbar a {
+  color: rgb(252, 252, 253); /* Default link color */
+  text-decoration: none;
+  padding: 10px;
+}
+
+/* Navbar link hover color */
+.navbar a:hover {
+  color: rgb(253, 27, 223); /* Color when the link is hovered over */
+}
 
   
   .satisfy-regular {
@@ -135,8 +151,12 @@ main {
   
   .pre-bday-meta {
     font-size: 50px;
-    color:blueviolet;
-  
+    color:rgb(253, 75, 230);
+    text-shadow: 
+    -1px -1px 0 #ffff00,  /* Top-left shadow (yellow) */
+     1px -1px 0 #ffff00,  /* Top-right shadow (yellow) */
+    -1px  1px 0 #ffff00,  /* Bottom-left shadow (yellow) */
+     1px  1px 0 #ffff00;
   
   
   }
@@ -182,4 +202,27 @@ main {
 
 
 
-   /*equipx page */
+   /*contact page */
+
+   .contact-project {
+    font-size: 42px;
+
+   }
+
+
+
+   .contact-say-hello {
+    color: #ffff00;
+    font-size: 28px;
+   }
+
+
+   .email-link {
+    color: aquamarine;
+    font-size: 23px;
+   }
+
+   .find-me-instagram  {
+    font-size: 23px;
+   }
+
