nature 9 times layout

--- a/css/main.css
+++ b/css/main.css
@@ -266,7 +266,7 @@ main {
 
  .main-nature-wrapper {
   max-width: 600px;
-  margin-left: auto;
+  margin-left: 70px;
   margin-right: auto;
   display: block
 }
