added logo to navigation bar-made nature 9 times responsive

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,8 @@ main {
     padding: 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    font-size: 28px;
     }
     .navbar li {
     display: inline-flex;
@@ -265,8 +267,9 @@ main {
  /*----Nature Nine Times---*/
 
  .main-nature-wrapper {
-  max-width: 600px;
-  margin-left: 70px;
+  padding-right: 500px;
+  max-width: 800px;
+  margin-left: auto;
   margin-right: auto;
   display: block
 }
@@ -281,13 +284,49 @@ main {
 .image-nature-text-wrapper img {
   
   height: auto;
+  width: 100%;
 }
 
 
 .nature-text-content {
-  max-width: 600px; /* Limit the width of the text content */
+  
   text-align: left; /* Ensure the text is aligned to the left */
   color: #f8f6f6; /* Optional: Adjust text color */
   font-size: 20px; /* Set font size */
   line-height: 1.6; /* Improve readability */
+  width: 50%;
+}
+
+
+ /*----Digital Self Portrait---*/
+
+ .main-digital-portrait-wrapper {
+  padding-right: 500px;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block
+}
+
+.image-digital-portrait-wrapper{
+  display: flex; /* Use Flexbox */
+  align-items: flex-start; /* Align items at the top */
+  gap: 20px; /* Add space between the image and text */
+  margin: 20px 0; /* Add margin around the wrapper */
+}
+
+.digital-portrait-text-content {
+  
+  height: auto;
+  width: 100%;
+}
+
+
+.digital-portrait-descript {
+  
+  text-align: left; /* Ensure the text is aligned to the left */
+  color: #f8f6f6; /* Optional: Adjust text color */
+  font-size: 20px; /* Set font size */
+  line-height: 1.6; /* Improve readability */
+  width: 50%;
 }
